add description to col

--- a/index.html
+++ b/index.html
@@ -11,15 +11,40 @@
     <div class="container">
         <div class="content">
             <div class="text-section">
-                <div class="text">Text 1</div>
-                <div class="text">Text 2</div>
-                <div class="text">Text 3</div>
+                <div class="text">設計</div>
+                <div class="text">行銷</div>
+                <div class="text">網站後台</div>
+                <div class="text">電商</div>
+                <div class="text">簡易維護免費</div>
+                <div class="text">網站安全</div>
+                <div class="text">頁面編輯器</div>
+                <div class="text">教學</div>
+                <div class="text">網站速度</div>
             </div>
             <div class="image-section">
-                <img src="https://images.unsplash.com/photo-1633596683562-4a47eb4983c5?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 1" class="image">
-                <img src="https://images.unsplash.com/photo-1638072536413-61c5c62b652e?q=80&w=1858&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 2" class="image">
-                <img src="https://images.unsplash.com/photo-1643228995868-bf698f67d053?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 3" class="image">
+                <div class="content-col">
+                    <p>我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    </p>
+                    <img src="https://images.unsplash.com/photo-1633596683562-4a47eb4983c5?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 1" class="image">
+                </div>
+                <div class="content-col">
+                    <p>我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    </p>
+                    <img src="https://images.unsplash.com/photo-1633596683562-4a47eb4983c5?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 1" class="image">
+                </div>
+                <div class="content-col">
+                    <p>我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    </p>
+                    <img src="https://images.unsplash.com/photo-1633596683562-4a47eb4983c5?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 1" class="image">
+                </div>
+                <div class="content-col">
+                    <p>我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    </p>
+                    <img src="https://images.unsplash.com/photo-1633596683562-4a47eb4983c5?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 1" class="image">
+                </div>
+                
             </div>
+        </div>
         </div>
     </div>
    <div style="height:150vh;background-color:red;"></div>
