--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div style="height:100vh;"></div>
     <div class="container">
-        <div class="content">
+        <div class="scroll-change-text-and-img">
             <div class="text-section">
                 <div class="text">設計</div>
                 <div class="text">行銷</div>
-                <div class="text">網站後台</div>
+                <div class="text">網站後台系統</div>
                 <div class="text">電商</div>
                 <div class="text">簡易維護免費</div>
                 <div class="text">網站安全</div>
@@ -21,33 +20,33 @@
                 <div class="text">教學</div>
                 <div class="text">網站速度</div>
             </div>
-            <div class="image-section">
+            <div class="content-section">
                 <div class="content-col">
-                    <p>我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
                     <img src="https://images.unsplash.com/photo-1633596683562-4a47eb4983c5?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 1" class="image">
                 </div>
                 <div class="content-col">
-                    <p>我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://images.unsplash.com/photo-1633596683562-4a47eb4983c5?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/736x/df/d4/12/dfd4127c7cc7b688404dca8b78431c1a.jpg" alt="Image 1" class="image">
                 </div>
                 <div class="content-col">
-                    <p>我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p  class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://images.unsplash.com/photo-1633596683562-4a47eb4983c5?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="Image 1" class="image">
                 </div>
                 <div class="content-col">
-                    <p>我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://images.unsplash.com/photo-1633596683562-4a47eb4983c5?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/736x/d9/7f/d4/d97fd44c8071ddad70ac287135df5180.jpg" alt="Image 1" class="image">
                 </div>
                 
             </div>
         </div>
         </div>
     </div>
-   <div style="height:150vh;background-color:red;"></div>
+   <div style="height:150vh;background-color:red;" class="footer"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="./script.js"></script>
