--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
 <body>
     <div class="container">
         <div class="scroll-change-text-and-img">
+            <div class="text-section-flex">
             <div class="text-section">
                 <div class="text">設計</div>
                 <div class="text">行銷</div>
                 <div class="text">網站後台系統</div>
                 <div class="text">電商</div>
                 <div class="text">簡易維護免費</div>
+                </div>
+                <div class="text-section">
                 <div class="text">網站安全</div>
                 <div class="text">頁面編輯器</div>
                 <div class="text">教學</div>
                 <div class="text">網站速度</div>
+                </div>
             </div>
+        
             <div class="content-section">
                 <div class="content-col">
                     <p class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
@@ -45,6 +50,7 @@
             </div>
         </div>
         </div>
+    </div>
     </div>
    <div style="height:150vh;background-color:red;" class="footer"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
