adjustment c lass name

--- a/index.html
+++ b/index.html
@@ -7,75 +7,73 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="gsap-scroll-img-text-change-container">
         <div class="scroll-change-text-and-img">
-            <div class="text-section-flex">
-            <div class="text-section">
-                <div class="text">設計</div>
-                <div class="text">行銷</div>
-                <div class="text">網站後台系統</div>
-                <div class="text">電商</div>
-                <div class="text">簡易維護免費</div>
+            <div class="scroll-change-text-section-flex">
+            <div class="scroll-change-text-section">
+                <div class="scroll-change-text">設計</div>
+                <div class="scroll-change-text">行銷</div>
+                <div class="scroll-change-text">網站後台系統</div>
+                <div class="scroll-change-text">電商</div>
+                <div class="scroll-change-text">簡易維護免費</div>
                 </div>
-                <div class="text-section">
-                <div class="text">網站安全</div>
-                <div class="text">頁面編輯器</div>
-                <div class="text">教學</div>
-                <div class="text">網站速度</div>
+                <div class="scroll-change-text-section">
+                <div class="scroll-change-text">網站安全</div>
+                <div class="scroll-change-text">頁面編輯器</div>
+                <div class="scroll-change-text">教學</div>
+                <div class="scroll-change-text">網站速度</div>
                 </div>
             </div>
         
-            <div class="content-section">
-                <div class="content-col">
-                    <p class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+            <div class="scroll-change-content-section">
+                <div class="scroll-change-content-col">
+                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://i.pinimg.com/736x/03/46/7a/03467a264ebac902149fae2352746ef7.jpg" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/736x/03/46/7a/03467a264ebac902149fae2352746ef7.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
-                <div class="content-col">
-                    <p class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                <div class="scroll-change-content-col">
+                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://i.pinimg.com/736x/df/d4/12/dfd4127c7cc7b688404dca8b78431c1a.jpg" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/736x/df/d4/12/dfd4127c7cc7b688404dca8b78431c1a.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
-                <div class="content-col">
-                    <p  class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                <div class="scroll-change-content-col">
+                    <p  class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
-                <div class="content-col">
-                    <p class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                <div class="scroll-change-content-col">
+                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://i.pinimg.com/736x/d9/7f/d4/d97fd44c8071ddad70ac287135df5180.jpg" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/736x/d9/7f/d4/d97fd44c8071ddad70ac287135df5180.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
-                <div class="content-col">
-                    <p class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                <div class="scroll-change-content-col">
+                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://i.pinimg.com/736x/03/46/7a/03467a264ebac902149fae2352746ef7.jpg" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/736x/03/46/7a/03467a264ebac902149fae2352746ef7.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
-                <div class="content-col">
-                    <p class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                <div class="scroll-change-content-col">
+                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://i.pinimg.com/736x/df/d4/12/dfd4127c7cc7b688404dca8b78431c1a.jpg" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/736x/df/d4/12/dfd4127c7cc7b688404dca8b78431c1a.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
-                <div class="content-col">
-                    <p  class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                <div class="scroll-change-content-col">
+                    <p  class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
-                <div class="content-col">
-                    <p class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                <div class="scroll-change-content-col">
+                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://i.pinimg.com/736x/d9/7f/d4/d97fd44c8071ddad70ac287135df5180.jpg" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/736x/d9/7f/d4/d97fd44c8071ddad70ac287135df5180.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
-                <div class="content-col">
-                    <p  class="content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                <div class="scroll-change-content-col">
+                    <p  class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
                     </p>
-                    <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="Image 1" class="image">
+                    <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
             </div>
         </div>
         </div>
-    </div>
-    </div>
    <div style="height:150vh;background-color:red;" class="footer"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
