--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
             </div>
         </div>
         </div>
-   <div style="height:150vh;background-color:red;" class="footer"></div>
+   <div style="height:150vh;background-color:red;" id="home-section6"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
+
