--- a/index.html
+++ b/index.html
@@ -12,62 +12,74 @@
             <div class="scroll-change-text-section-flex">
             <div class="scroll-change-text-section">
                 <div class="scroll-change-text">設計</div>
+                <div class="scroll-change-text">SEO 與內容優化</div>
                 <div class="scroll-change-text">行銷</div>
                 <div class="scroll-change-text">網站後台系統</div>
-                <div class="scroll-change-text">電商</div>
-                <div class="scroll-change-text">簡易維護免費</div>
+                <div class="scroll-change-text">電商功能</div>
+                <div class="scroll-change-text">網站維護</div>
                 </div>
                 <div class="scroll-change-text-section">
+                <div class="scroll-change-text">互動功能</div>
                 <div class="scroll-change-text">網站安全</div>
                 <div class="scroll-change-text">頁面編輯器</div>
-                <div class="scroll-change-text">教學</div>
                 <div class="scroll-change-text">網站速度</div>
+                <div class="scroll-change-text">數據追蹤與分析</div>
                 </div>
             </div>
         
             <div class="scroll-change-content-section">
                 <div class="scroll-change-content-col">
-                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p class="scroll-change-content-text">我們提供依照企業風格設計的響應式網頁，結合現代流行風格，適用多種裝置，包含企業、電商、一頁式（Landing page）、部落格、作品集等。
                     </p>
                     <img src="https://i.pinimg.com/736x/03/46/7a/03467a264ebac902149fae2352746ef7.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
                 <div class="scroll-change-content-col">
-                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p class="scroll-change-content-text">SEO工具提供全面的優化功能，修改meta資料（關鍵字、社群分享、說明等）、控制google索引index、優化圖片SEO、生成sitemap網站地圖、管理重導向、清理代碼和進行內容分析。
                     </p>
                     <img src="https://i.pinimg.com/736x/df/d4/12/dfd4127c7cc7b688404dca8b78431c1a.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
                 <div class="scroll-change-content-col">
-                    <p  class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p  class="scroll-change-content-text">網站行銷功能豐富，包含數據追蹤、廣告投放、A/B測試、SEO優化、信箱行銷、EDM訂閱、社群媒體整合，並可外包給專業行銷公司，有效提升品牌影響力。
                     </p>
                     <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
                 <div class="scroll-change-content-col">
-                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p class="scroll-change-content-text">WordPress 後台管理簡單易用，適合各種使用者，擁有直觀介面和高擴展性，支援多種插件和自訂設計，讓用戶可靈活設定外觀、功能、網址、管理員權限等，滿足多樣化需求，是全球最受歡迎的網站管理系統。
                     </p>
                     <img src="https://i.pinimg.com/736x/d9/7f/d4/d97fd44c8071ddad70ac287135df5180.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
                 <div class="scroll-change-content-col">
-                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p class="scroll-change-content-text">完善的商品頁面與購物車系統，支持多種付款方式和物流服務。WooCommerce 提供靈活的訂單管理、促銷設定、庫存管理和銷售報表等功能，還有優化結帳流程和多種金流付款方式，提升商家運營效率和顧客購物體驗。
                     </p>
                     <img src="https://i.pinimg.com/736x/03/46/7a/03467a264ebac902149fae2352746ef7.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
                 <div class="scroll-change-content-col">
-                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p class="scroll-change-content-text">我們提供首年免費主機與網址，並有網站設計、內容更新、圖片更換等服務。還有定期備份、掃毒與更新版本等維護服務。免費維護包含錯誤修復與基本維持。商品上架與功能更新依需求報價，資安防護含防火牆、CDN與登入限制，全面保障網站安全。
                     </p>
                     <img src="https://i.pinimg.com/736x/df/d4/12/dfd4127c7cc7b688404dca8b78431c1a.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
                 <div class="scroll-change-content-col">
-                    <p  class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p  class="scroll-change-content-text">我們的網站功能包括網站互動動畫、彈出視窗、IG貼文牆API、部落格文章系統、分享按鈕、諮詢表單及社群媒體整合，增強用戶互動。我們還提供篩選功能、圖庫、電子報訂閱和FB功能串接等功能。
                     </p>
                     <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
                 <div class="scroll-change-content-col">
-                    <p class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p class="scroll-change-content-text">配備防火牆和網站掃毒以提升資安，定期更新網站和擴充功能，SSL加密保障安全，Google驗證防止機器人攻擊，以及提供備份和還原系統。
                     </p>
                     <img src="https://i.pinimg.com/736x/d9/7f/d4/d97fd44c8071ddad70ac287135df5180.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
                 <div class="scroll-change-content-col">
-                    <p  class="scroll-change-content-text">我們永遠站在客戶的立場著想，包括您的作品，我們也會為您的客戶多想，讓他們感到更貼心，每個細節都是我們的用心！
+                    <p  class="scroll-change-content-text">我們的頁面編輯器，具有乾淨程式碼、Flexbox 可完成複雜排版、動態資料處理、適合建立響應式網站。它提供終身更新和快速後台加載，用戶友好且無鎖定問題。
+                    </p>
+                    <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="technology-img" class="scroll-change-img">
+                </div>
+                <div class="scroll-change-content-col">
+                    <p  class="scroll-change-content-text">怕網站過於緩慢？透過瀏覽器快取，減少重複下載時間；內容和圖片延後載入確保頁面快速顯示，並利用CDN加速全球內容傳遞，確保每位用戶都能享有流暢的瀏覽體驗。
+                    </p>
+                    <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="technology-img" class="scroll-change-img">
+                </div>
+                <div class="scroll-change-content-col">
+                    <p  class="scroll-change-content-text">可追蹤網站的整體成效，如關鍵字、點擊按鈕次數、頁面瀏覽次數等，讓優化網站更簡單!
                     </p>
                     <img src="https://i.pinimg.com/564x/60/fd/49/60fd49f10250faff65c1524d4ec1e916.jpg" alt="technology-img" class="scroll-change-img">
                 </div>
@@ -80,4 +92,3 @@
     <script src="./script.js"></script>
 </body>
 </html>
-
